--- a/profile/profile.html
+++ b/profile/profile.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;1,200&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="profile.css">
-  <link rel="stylesheet" href="../navbar.css">
+  <link rel="stylesheet" href="../main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
